--- a/ss01_ES6/bai9.html
+++ b/ss01_ES6/bai9.html
@@ -8,8 +8,7 @@
   <body>
     <script>
       const fn = (...name) => {
-        let arrName = [...name];
-        return `Welcome ${arrName}`;
+        return `Welcome ${name}`;
       };
 
       console.log(fn("hieu", "thuan", "toai"));
