--- a/casestudy-furama-m5/Layout_Casestudy/hotel-html-template/customer.html
+++ b/casestudy-furama-m5/Layout_Casestudy/hotel-html-template/customer.html
@@ -112,6 +112,7 @@
                             <a href="customer.html" class="nav-item nav-link"
                             >Khách hàng</a
                             >
+                            <a href="contact.html" class="nav-item nav-link">Hợp đồng</a>
                         </div>
                         <a
                                 href="https://htmlcodex.com/hotel-html-template-pro"
