--- a/casestudy-furama-m5/Layout_Casestudy/hotel-html-template/home.html
+++ b/casestudy-furama-m5/Layout_Casestudy/hotel-html-template/home.html
@@ -94,6 +94,7 @@
                                     </div>
                                 </div> -->
                                 <a href="customer.html" class="nav-item nav-link">Khách hàng</a>
+                                <a href="contact.html" class="nav-item nav-link">Hợp đồng</a>
                             </div>
                             <a href="https://htmlcodex.com/hotel-html-template-pro" class="btn btn-primary rounded-0 py-4 px-md-5 d-none d-lg-block">Liên hệ đội ngũ phát triển<i class="fa fa-arrow-right ms-3"></i></a>
                         </div>
